--- a/client_code/New/form_template.yaml
+++ b/client_code/New/form_template.yaml
@@ -27,63 +27,64 @@ components:
         font: '', spacing_above: none, type: text, spacing_below: none, italic: false,
         background: '', bold: false, underline: false}
       name: job_input
-      layout_properties: {grid_position: 'QHRNJM,DSNXWM', row: UZVXNL, width_xs: 3,
-        col_xs: 3, width: 26.2031}
+      layout_properties: {grid_position: 'QHRNJM,DSNXWM', row: YNGQHU, width_xs: 8,
+        col_xs: 0, width: 26.2031}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: 'Customer name :', font_size: 14, font: '',
+          Font', visible: true, text: 'Customer Details :', font_size: 14, font: '',
         spacing_above: none, icon_align: left, spacing_below: none, italic: false,
         background: '', bold: false, underline: false, icon: ''}
       name: label_3
-      layout_properties: {row: TEJPOI, width_xs: 3, col_xs: 0, width: 86.1562}
+      layout_properties: {row: TEJPOI, width_xs: 3, col_xs: 0, width: 105.812}
     - type: TextBox
-      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
+      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: name,
         border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
         font: '', spacing_above: none, type: text, spacing_below: none, italic: false,
         background: '', bold: false, underline: false}
       name: customer_input
-      layout_properties: {row: TEJPOI, width_xs: 3, col_xs: 3, width: 26.2031}
-    - type: Label
-      properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: 'Customer Mobile :', font_size: 14, font: '',
-        spacing_above: none, icon_align: left, spacing_below: none, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: label_4
-      layout_properties: {row: KWYRGS, width_xs: 3, col_xs: 0, width: 86.1562}
+      layout_properties: {row: REDCSS, width_xs: 5, col_xs: 0, width: 111}
     - type: TextBox
-      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
+      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: mobile,
         border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
         font: '', spacing_above: none, type: text, spacing_below: none, italic: false,
         background: '', bold: false, underline: false}
       name: mobile_input
-      layout_properties: {row: KWYRGS, width_xs: 3, col_xs: 3, width: 26.2031}
+      layout_properties: {row: REDCSS, width_xs: 5, col_xs: 6, width: 107.25}
+      event_bindings: {}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: 'Sub brand :', font_size: 14, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+          Font', visible: true, text: 'Merchant Details :', font_size: 14, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
       name: label_6
-      layout_properties: {row: ZGDAHT, width_xs: 3, col_xs: 0, width: 86.1562}
+      layout_properties: {row: ZGDAHT, width_xs: 3, col_xs: 0, width: 106.781}
     - type: TextBox
-      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
+      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: merchant portal,
         border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-        font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+        font: '', spacing_above: small, type: text, spacing_below: small, italic: true,
+        background: '', bold: false, underline: false}
+      name: text_box_1
+      layout_properties: {row: SUBZPA, width_xs: 5, col_xs: 0, width: 74.781}
+    - type: TextBox
+      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: sub brand,
+        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+        font: '', spacing_above: small, type: text, spacing_below: small, italic: true,
         background: '', bold: false, underline: false}
       name: subbrand_input
-      layout_properties: {row: ZGDAHT, width_xs: 3, col_xs: 3, width: 28.2031}
+      layout_properties: {row: SUBZPA, width_xs: 5, col_xs: 6, width: 72.781}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: 'Escalation Type :', font_size: 14, font: '',
-        spacing_above: none, icon_align: left, spacing_below: none, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
+          Font', visible: true, text: 'Escalation :', font_size: 14, font: '', spacing_above: none,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
       name: label_2
-      layout_properties: {row: IMXBDW, width_xs: 3, col_xs: 0, width: 86.1562}
+      layout_properties: {row: IMXBDW, width_xs: 3, col_xs: 0, width: 106.781}
     - type: DropDown
       properties:
         role: outlined
         align: full
         tooltip: ''
-        placeholder: All
+        placeholder: type
         border: ''
         enabled: true
         foreground: ''
@@ -99,22 +100,15 @@ components:
         underline: false
         include_placeholder: true
       name: dd_esc_type
-      layout_properties: {row: IMXBDW, width_xs: 3, col_xs: 3, width: 82.0156}
+      layout_properties: {row: XJZLRE, width_xs: 3, col_xs: 0, width: 106.781}
       data_bindings:
       - {property: items, code: self.esc_type}
-    - type: Label
-      properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: 'Escalation Status :', font_size: 14, font: '',
-        spacing_above: none, icon_align: left, spacing_below: none, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: label_5
-      layout_properties: {row: RQWNGD, width_xs: 3, col_xs: 0, width: 56.1406}
     - type: DropDown
       properties:
         role: outlined
         align: full
         tooltip: ''
-        placeholder: All
+        placeholder: status
         border: ''
         enabled: true
         foreground: ''
@@ -130,22 +124,29 @@ components:
         underline: false
         include_placeholder: true
       name: dd_esc_status
-      layout_properties: {row: RQWNGD, width_xs: 3, col_xs: 3, width: 82.0156}
+      layout_properties: {row: XJZLRE, width_xs: 3, col_xs: 3, width: 106.781}
       data_bindings:
       - {property: items, code: self.esc_status}
+    - type: TextArea
+      properties: {role: outlined, align: left, height: 77, tooltip: '', placeholder: enter comment here,
+        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 10,
+        auto_expand: false, font: '', spacing_above: small, spacing_below: small,
+        italic: true, background: '', bold: false, underline: false}
+      name: addcomment_input
+      layout_properties: {row: XIOFIZ, width_xs: 6, col_xs: 0, width: 145.578}
     - type: Button
       properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: Submit, font_size: null, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       name: button_1
-      layout_properties: {row: RQWNGD, width_xs: 4, col_xs: 6, width: 119.359}
+      layout_properties: {row: NUKJET, width_xs: 3, col_xs: 0, width: 119.359}
     - type: Button
       properties: {role: outlined-button, align: center, tooltip: '', border: '',
         enabled: true, foreground: '', visible: true, text: Clear, font_size: null,
         font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
         background: '', bold: false, underline: false, icon: ''}
       name: button_2
-      layout_properties: {row: RQWNGD, width_xs: 4, col_xs: 8, width: 119.359}
+      layout_properties: {row: NUKJET, width_xs: 3, col_xs: 3, width: 119.359}
       event_bindings: {click: clear_button_click}
 is_package: true
