--- a/client_code/New/form_template.yaml
+++ b/client_code/New/form_template.yaml
@@ -24,7 +24,7 @@ components:
       name: label_1
       layout_properties: {row: UZVXNL, width_xs: 9, col_xs: 0, width: 140.344}
     - type: TextBox
-      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: job reference,
+      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: job ID,
         border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
         font: '', spacing_above: none, type: text, spacing_below: none, italic: true,
         background: '', bold: false, underline: false}
@@ -32,6 +32,13 @@ components:
       layout_properties: {grid_position: 'QHRNJM,DSNXWM', row: YNGQHU, width_xs: 12,
         col_xs: 0, width: 163.141}
       event_bindings: {}
+    - type: TextBox
+      properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: job reference,
+        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+        font: '', spacing_above: none, type: text, spacing_below: none, italic: true,
+        background: '', bold: false, underline: false}
+      name: job_ref
+      layout_properties: {row: CGTMXX, width_xs: 12, col_xs: 0, width: 163.141}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
         visible: true, text: 'Customer Details :', font_size: 14, font: '', spacing_above: none,
