--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -21,16 +21,17 @@ components:
     components:
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: ' Start Date', font_size: 12, font: '', spacing_above: none,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+          Font', visible: true, text: 'Start
+
+          Date', font_size: 12, font: '', spacing_above: none, icon_align: left, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: ''}
       layout_properties:
         col_widths: {}
         grid_position: ZPIVJB,TXYOGB
         row: FSHRWD
         width_xs: 1
         col_xs: 0
-        width: 29.3281
+        width: 49.5781
       name: startdate
     - type: DatePicker
       properties: {role: outlined, align: left, max_date: '', pick_time: false, tooltip: '',
@@ -51,16 +52,18 @@ components:
       name: start_date_picker
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: Merchant Portal, font_size: 12, font: '', spacing_above: none,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+          Font', visible: true, text: 'Merchant
+
+          Portal', font_size: 12, font: '', spacing_above: none, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       layout_properties:
         col_widths: {}
         grid_position: VAIUAH,CDIYFH
         row: FSHRWD
         width_xs: 1
         col_xs: 3
-        width: 34.9844
+        width: 49.5781
       name: merchant
     - type: DropDown
       properties:
@@ -96,16 +99,17 @@ components:
       name: dd_merchant
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: Assigned To, font_size: 12, font: '', spacing_above: none,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+          Font', visible: true, text: 'Assigned
+
+          To', font_size: 12, font: '', spacing_above: none, icon_align: left, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: ''}
       layout_properties:
         col_widths: {}
         grid_position: EZYFRF,HGBXAO
         row: FSHRWD
         width_xs: 1
         col_xs: 5
-        width: 34.9844
+        width: 49.5781
       name: label_1_copy_2
     - type: DropDown
       properties:
@@ -141,16 +145,18 @@ components:
       name: dd_assigned
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: Escalation Status, font_size: 12, font: '',
-        spacing_above: none, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
+          Font', visible: true, text: 'Escalation
+
+          Status', font_size: 12, font: '', spacing_above: none, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       layout_properties:
         col_widths: {}
         grid_position: YRIIGM,PHJKJN
         row: FSHRWD
         width_xs: 1
         col_xs: 7
-        width: 34.9844
+        width: 49.5781
       name: label_2_copy_2
     - type: DropDown
       properties:
@@ -186,16 +192,17 @@ components:
       name: dd_esc_status
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: ' End  Date', font_size: 12, font: '', spacing_above: none,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+          Font', visible: true, text: 'End
+
+          Date', font_size: 12, font: '', spacing_above: none, icon_align: left, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: ''}
       layout_properties:
         col_widths: {}
         grid_position: RTRAIL,UUMMHX
         row: PKQKNH
         width_xs: 1
         col_xs: 0
-        width: 34.9844
+        width: 49.5781
       name: enddate
     - type: DatePicker
       properties: {role: outlined, align: left, max_date: '', pick_time: false, tooltip: '',
@@ -216,16 +223,18 @@ components:
       name: end_date_picker
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: Job Status, font_size: 12, font: '', spacing_above: none,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+          Font', visible: true, text: 'Job
+
+          Status', font_size: 12, font: '', spacing_above: none, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       layout_properties:
         col_widths: {}
         grid_position: BIPTRH,JGAGJC
         row: PKQKNH
         width_xs: 1
         col_xs: 0
-        width: 53.3281
+        width: 49.5781
       name: label_1_copy_3
     - type: DropDown
       properties:
@@ -261,16 +270,18 @@ components:
       name: dd_job_status
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: Sub Brand, font_size: 12, font: '', spacing_above: none,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+          Font', visible: true, text: 'Sub
+
+          Brand', font_size: 12, font: '', spacing_above: none, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
       layout_properties:
         col_widths: {}
         grid_position: MZOWYR,CFXUPS
         row: PKQKNH
         width_xs: 1
         col_xs: 2
-        width: 45.2344
+        width: 49.5781
       name: label_2
     - type: DropDown
       properties:
@@ -303,16 +314,17 @@ components:
       name: dd_completion_code
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Filter
-          Font', visible: true, text: Escalation Type, font_size: 12, font: '', spacing_above: none,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
+          Font', visible: true, text: 'Escalation
+
+          Type', font_size: 12, font: '', spacing_above: none, icon_align: left, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: ''}
       layout_properties:
         col_widths: {}
         grid_position: CPYRQB,UXMVIQ
         row: PKQKNH
         width_xs: 1
         col_xs: 0
-        width: 34.9844
+        width: 49.5781
       name: label_2_copy
     - type: DropDown
       properties:
