--- a/anvil.yaml
+++ b/anvil.yaml
@@ -18,7 +18,8 @@ startup: {type: form, module: Homepage}
 package_name: Intraday_Dashboard_v2
 allow_embedding: false
 name: Intraday Dashboard v2
-runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null}
+runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null,
+  server_persist: true}
 metadata: {logo_img: 'asset:RadaroLogo_BlackHigh.png'}
 startup_form: null
 db_schema:
