--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -553,7 +553,7 @@ components:
     enabled: true
     files: []
     foreground: ''
-    visible: true
+    visible: false
     text: Upload
     font_size: null
     font: ''
