--- a/anvil.yaml
+++ b/anvil.yaml
@@ -33,7 +33,7 @@ allow_embedding: false
 name: Intraday Dashboard v2
 runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null,
   server_persist: true}
-metadata: {logo_img: 'asset:RadaroLogo_BlackHigh.png'}
+metadata: {logo_img: 'asset:R.jpg'}
 startup_form: null
 db_schema:
   escalation_status:
